# AEGIS

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
dashboard/: index.html  server.py
dashboard/css/: animations.css  components.css  index.css  layout.css
dashboard/js/: alerts.js  app.js  charts.js  map.js  plume.js  utils.js  voice.js
python_brain/: pyproject.toml  run_brain.py
python_brain/src/aegis/: __init__.py  config.py
python_brain/src/aegis/fatigue/: fatigue_monitor.py
python_brain/src/aegis/graph/: equipment_graph.py
python_brain/src/aegis/ipc/: __init__.py  reader.py
python_brain/src/aegis/narrator/: narrator.py
python_brain/src/aegis/narrator/templates/: alert_prompt.jinja2
python_brain/src/aegis/permits/: permit_store.py
python_brain/src/aegis/rag/: corpus.py  retriever.py
python_brain/src/aegis/risk/: batch_processor.py  bayesian_net.py
python_brain/tests/: test_bayesian.py  test_cctv.py  test_drift.py  test_fatigue.py  test_industrial.py  test_ipc.py  test_malfunction.py  test_mitigation.py  test_narrator.py  test_routing.py
rust_core/: Cargo.toml
rust_core/plume_sim/: Cargo.toml
rust_core/plume_sim/src/: lib.rs
rust_core/ring_buffer/: Cargo.toml
rust_core/ring_buffer/src/: lib.rs  protocol.rs
rust_core/scada_sim/: Cargo.toml
rust_core/scada_sim/src/: lib.rs
rust_core/tti_engine/: Cargo.toml
rust_core/tti_engine/src/: lib.rs
shared/: event_schema.md
