[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS Python Reasoning Brain"
dependencies = [
    "msgpack>=1.0.0",
    "numpy>=1.20.0",
    "networkx>=3.0",
    "pgmpy>=0.1.25",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
