[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS Python Reasoning Brain"
dependencies = [
    "msgpack>=1.2.1",
    "numpy>=1.20.0",
    "networkx>=3.0",
    "pgmpy>=1.1.2",
    "scipy>=1.7.0",
    "pandas>=3.0.3",
    "sentence-transformers",
    "openai",
    "jinja2",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
